--- a/app/views/quizapp/index.html.erb
+++ b/app/views/quizapp/index.html.erb
@@ -1,4 +1,4 @@
 <div class="col-xs-10 col-xs-offset-1">
 	<h1 class="h1-color">Welcome to my first Quiz APP</h1>
-	<h2 class ="h2-color">Click on <%=link_to 'About', about_path %> to see more informaton about me</h2>
+	<h2 class ="h2-color">Click on <%=link_to 'About', about_path %> to see more informaton about me.</h2>
 </div>
