added a few lines in about file

--- a/app/views/quizapp/about.html.erb
+++ b/app/views/quizapp/about.html.erb
@@ -13,7 +13,7 @@
   <div class="col-xs-8 col-xs-offset-2">
   	<p>
   		Kareem is a Systems Engineer with experience in various fields from Oil and gas drilling operation to Data Aquisitions , VOIP systems & IP networks.
-  		He has a great passion for technology and loves learning new skill
+  		He has a great passion for technology and loves learning new skills.
   	</p>
   	</div>
 <br class="clear" />
