Added a post model and posts links on main nav bar

--- a/app/assets/stylesheets/quizapp.css.scss
+++ b/app/assets/stylesheets/quizapp.css.scss
@@ -3,5 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .h1-color {
 	
-	color: green;
+	color: light-green;
+}
+.simple-box {
+
+	background: #ffffcc;
+	border: 1px solid black;
+}
+.white-box {
+	background: #ffffff;
 }
