--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Quiz1-Firehose Project</a>
+      <a class="navbar-brand" href="/">Quiz-Firehose Project</a>
     </div>
     &nbsp;&nbsp;
     <!-- Collect the nav links, forms, and other content for toggling -->
   
       <ul class="nav navbar-nav navbar-left">
         <li><a href="/about">About</a></li>
+        <li><%= link_to 'Posts', posts_path  %></li>
+        <li><%= link_to 'New Post' , new_post_path %></li>
       </ul>
   </div><!-- /.container-fluid -->
   
